[metadata]
name = GitHookEm
version = 0.1.0
author = Tyler
author_email = tyler@example.com
description = A package for git hooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tmasthay/GitHookEm
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires = file: requirements.txt
packages = find:

[options.entry_points]
console_scripts =
    commit-msg-directives = git_hook_em.commit_msg.directives:main
    ban-super-secret = git_hook_em.pre_commit.ban_souper_secret:main

[options.scripts]
update_imports.py
